scripts/nullness/annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Status.java:19: error: [override.return] Incompatible return type.
	@Nullable public String toString(){
	                 ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Status
    @Initialized @Nullable String toString(@Initialized @NonNull Status this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Request.java:13: error: [initialization.fields.uninitialized] the constructor does not initialize fields: method, url, protocol
	public Request(){};
	       ^
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Method.java:17: error: [override.return] Incompatible return type.
	@Nullable public String toString(){
	                 ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Method
    @Initialized @Nullable String toString(@Initialized @NonNull Method this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Url.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: path, extension
	public Url(){};
	       ^
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Path.java:17: error: [override.return] Incompatible return type.
	@Nullable public String toString(){
	                 ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Path
    @Initialized @Nullable String toString(@Initialized @NonNull Path this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Extension.java:17: error: [override.return] Incompatible return type.
	@Nullable public String toString(){
	                 ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Extension
    @Initialized @Nullable String toString(@Initialized @NonNull Extension this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:11: error: [initialization.fields.uninitialized] the constructor does not initialize fields: date
	public Date(){
	       ^
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/Record.java:17: error: [initialization.fields.uninitialized] the constructor does not initialize fields: userIp, userTime, request, userStatus, size
	public Record(){}
	       ^
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:22: error: [argument] incompatible argument for parameter arg0 of Map.get.
			Integer number = map.get(status);
			                         ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:41: error: [argument] incompatible argument for parameter arg0 of Map.get.
			Integer number = map.get(extension);
			                         ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allparsers/LogPars.java:17: error: [dereference.of.nullable] dereference of possibly-null reference logStr
		String[] recordStr2= logStr.split(System.getProperty("line.separator"));
		                     ^
11 errors
